--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -1,37 +1,45 @@
-/* Select the image with a class of kitty-1 */
-write-your-selector-here {
+/* 1) Selects the image with a class of kitty-1 */
+.kitty-1 {
   position: absolute;
   z-index: 1;
   top: 276px;
   left: 129px;
 }
 
-/* Select the image with id of kitty-2 */
-write-your-selector-here {
+
+/* 2) Selects the image with an ID of kitty-2 */
+#kitty-2 {
   position: absolute;
   z-index: 2;
   top: 212px;
   left: 369px;
 }
 
-/* Select the image inside the element with an id of basket (using its descendent relationship) */
-write-your-selector-here {
+
+/* 3) Selects the image inside the element with an ID of basket (descendant selector) */
+#basket img {
   position: absolute;
   z-index: 5;
   top: 291px;
   left: 319px;
+  display: block;
 }
 
-/* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
-write-your-selector-here {
+
+
+/* 4) Selects the image based on its sibling element */
+#ball + img {
   position: absolute;
   z-index: 4;
   top: 260px;
   left: 455px;
+  display: block;
 }
 
-/* Select the image that has an alt attribute value matching "Kitty 5" (using attribute selector) */
-write-your-selector-here {
+
+/* 5) Selects the image that has an alt attribute value matching "Kitty 5" (attribute selector) */
+img[alt="Kitty 5"] {
+
   position: absolute;
   z-index: 3;
   top: 217px;
